# xypyutil

./: .gitignore  AGENTS.md  LICENSE  README.md  ctrl_c_windows.py  kkbuildutil.py  kkpyutil.py  kkttssave.ps1  kkttsspeak.ps1  pyproject.toml  xypyutil.py
test/: test_default.py
test/_org/: ast_test.py  child_proc_prints.py  child_proc_prints_overtime.py  dsv_comma.txt  dsv_whitespace.txt  exclusive.py  files_abs_posix.list  files_abs_win.list  files_rel_posix.list  files_rel_win.list  kill_this.sh  lines.txt.lnk  lines.txt.symlink  load_gb.json  load_utf8.json  log_this.py  my.bin.plist  my.plist  my_cmd.py  pipe_this.py  profile_this.py  reenter.py  simple.ini  subs_keywords.txt  subs_this.txt  test_trace_this.py  timeout_proc.py  trace_this.py  with_docstring.lua  with_docstring.py  without_docstring.py  without_docstring2.py  without_docstring3.py
test/_org/compare_these/: file2.txt
test/_org/locale/: all.pot
test/_org/locale/en/LC_MESSAGES/: all.mo
test/_org/locale/zh/LC_MESSAGES/: all.po
test/_org/match_files/: ours.txt  theirs.txt
test/_org/recover_from_these/: my.file.1  my.file.2
test/_ref/: subs_this.ref.txt  subs_this_literal.ref.txt
