[tool.poetry]
name = "kkpyutil"
version = "1.1.1"
description = "zero-dependency Python utility collection with an emphasis on systems programming and DevOps"
authors = ["Beinan Li <li.beinan@gmail.com>"]
maintainers = ["Beinan Li <li.beinan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/kakyoism/kkpyutil/"
documentation = "https://github.com/kakyoism/kkpyutil/README.md"
keywords = [
    "utility",
    "logging",
    "systems",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.3.9"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/kakyoism/kkpyutil/issues"
