[tool.poetry]
name = "kkpyutil"
version = "1.41.0"
description = "Building blocks for sysadmin and DevOps"
authors = ["Beinan Li <li.beinan@gmail.com>"]
maintainers = ["Beinan Li <li.beinan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/kakyoism/kkpyutil/"
documentation = "https://github.com/kakyoism/kkpyutil/README.md"
keywords = [
    "utility",
    "logging",
    "systems",
]

include = [
    { path = "kkpyutil_helper", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.3.9"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/kakyoism/kkpyutil/issues"
