[tool.poetry]
name = "xypyutil"
version = "1.0.6"
description = "Building blocks for sysadmin and DevOps"
authors = [
    "Xi Ye <zcyh147@gmail.com>",
    "Beinan Li <li.beinan@gmail.com>"
]
maintainers = [
    "Xi Ye <zcyh147@gmail.com>",
    "Beinan Li <li.beinan@gmail.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zcyh147/xypyutil/"
repository = "https://github.com/zcyh147/xypyutil/"
documentation = "https://github.com/zcyh147/xypyutil/README.md"
keywords = [
    "utility",
    "logging",
    "systems",
]

include = [
    { path = "kkpyutil_helper", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "*"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.3.9"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/zcyh147/xypyutil//issues"
